plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.google.protobuf' version '0.10.0'
}

group = 'com.shadowfit'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// --- Spring Boot 핵심 ---
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 다중사용자 실시간 동기화(그룹, WebSocket) — docs/decisions/multiuser-realtime-sync.md,
	// 2026-08-30 사용자 confirm으로 채택 확정. Redis 스타터는 단일 인스턴스 1차 구현 범위 밖이라 안 넣는다.
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// --- DB & Utility ---
	runtimeOnly 'com.mysql:mysql-connector-j'

	// --- Flyway (스키마 마이그레이션, 이슈 #115 / schema-migration-tracking.md §8 채택) ---
	// 버전을 박지 않는 이유: Boot 3.5.16 의 의존성 관리가 Flyway 11.x 를 이미 잡고 있다.
	// flyway-mysql 이 별도인 이유: Flyway 10 부터 DB 벤더별 지원이 코어에서 분리됐다.
	// 빠뜨리면 "Unsupported Database: MySQL" 로 부팅이 실패한다.
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
	implementation 'org.modelmapper:modelmapper:3.2.6'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.9.1'
	// springdoc(swagger-core-jakarta)이 끌어오는 commons-lang3 3.17.0이 GHSA-j288-q9x7-2f5v
	// (3.0~3.17.x 취약, 긴 입력 처리 시 무한 재귀)에 걸려 있어 명시적으로 상향.
	implementation 'org.apache.commons:commons-lang3:3.20.0'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// Micrometer 지표를 Prometheus 가 긁어갈 텍스트 형식으로 내보낸다 (/actuator/prometheus).
	// runtimeOnly 인 이유: 코드가 이 라이브러리를 import 하지 않는다. SessionMetrics 는
	// MeterRegistry 인터페이스만 알고, 어떤 형식으로 나가는지는 클래스패스가 정한다.
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	// 테스트에서는 compile 이 필요하다 — SessionMetricsExportNamesTest 가
	// PrometheusMeterRegistry 를 직접 만들어 "내보내지는 이름"을 고정한다.
	testImplementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.4.0'

	// --- Security ---
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	// Boot 3.5.16이 관리하는 jackson-databind(2.21.4)가 GHSA-5jmj-h7xm-6q6v(2.19.0~2.21.4
	// 취약)에 걸려 있어 이 모듈만 명시적으로 상향(jackson-bom의 나머지 모듈은 그대로 둠).
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.22.2'

	// spring-boot-starter-logging이 끌어오는 log4j-to-slf4j가 log4j-api(2.24.3)를 물고 오는데,
	// 이게 GHSA(2.13.1~2.25.4 취약, MapMessage.asJson()의 비정상 부동소수점 JSON 직렬화 결함)에
	// 걸려 있어 상향. 이 앱은 log4j-core가 없어(로깅 구현은 Logback) 취약 경로(JsonTemplateLayout·
	// MapMessage.asJson) 자체가 지금은 안 닿지만, log4j-core가 나중에 추가돼도 안전하도록 고정.
	implementation 'org.apache.logging.log4j:log4j-api:2.26.1'

	// --- QueryDSL (동적 조회 계층, querydsl-adoption.md §1-1 채택) ---
	// 버전을 박지 않는 이유: Boot 3.5.16 의 의존성 관리가 QueryDSL 5.1.0 을 이미 잡고 있다.
	// 'jakarta' 분류자는 필수 — 빠뜨리면 javax 기반 아티팩트가 딸려온다.
	implementation 'com.querydsl:querydsl-jpa::jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt::jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// --- Lombok & Dev ---
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// --- gRPC & Protobuf (버전 정합성 해결) ---
	def grpcVersion = '1.84.0'
	def protobufVersion = '4.36.1'

	// Starter는 API만 제공하고 실제 구현체는 아래에서 버전 고정
	implementation 'net.devh:grpc-client-spring-boot-starter:3.1.0.RELEASE'
	implementation 'net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE'

	// 핵심 클래스들 (GeneratedMessageV3 등을 포함함)
	implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
	implementation "io.grpc:grpc-protobuf:${grpcVersion}"
	implementation "io.grpc:grpc-stub:${grpcVersion}"
	implementation "io.grpc:grpc-services:${grpcVersion}"

	// 유틸리티 (Timestamps 사용을 위해 필수!)
	implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
	implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"

	compileOnly 'org.apache.tomcat:annotations-api:6.0.53'

	// --- Test ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'

	// 실 MySQL 테스트(race 프로파일) — Testcontainers 가 mysql:8.0 컨테이너를 띄우고
	// @ServiceConnection 이 datasource 를 주입한다. 버전은 Boot BOM 이 관리한다.
	// 왜 필요한가: H2(MySQL 모드)는 JSON_TABLE·파티션·FK 없는 pose_data 를 재현 못 한다 —
	// src/test/resources/application-race.yml 헤더 참조.
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.testcontainers:junit-jupiter'

	//docker 빌드 없이 바로 수정
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

protobuf {
	protoc {
		artifact = "com.google.protobuf:protoc:4.36.1"
	}
	plugins {
		grpc {
			artifact = "io.grpc:protoc-gen-grpc-java:1.84.0"
		}
	}
	generateProtoTasks {
		all()*.plugins {
			// 이 중괄호 안에 아무것도 없어도 이 블록 자체가 'grpc' 파일을 만들라고 명령하는 겁니다.
			grpc {}
		}
	}
}

sourceSets {
	main {
		// gRPC 계약은 저장소 루트 proto/ 한 벌이다 — ai-server 도 같은 파일에서 생성한다.
		// 예전엔 backend/src/main/proto 와 ai-server/app/proto 에 사본이 있어 손으로 맞춰야 했다.
		// Docker 빌드는 컨텍스트가 저장소 루트라(compose·CD) 이 상대경로가 그대로 성립한다.
		proto {
			srcDirs = ['../proto']
		}
		java {
			// 하드코딩된 문자열 대신, generateProto 태스크가 만든 결과물 경로를 직접 참조합니다.
			srcDirs 'src/main/java'
			srcDirs 'build/generated/source/proto/main/java'
			srcDirs 'build/generated/source/proto/main/grpc'
		}
	}
}
	tasks.named('test') {
		useJUnitPlatform()

		// 아래 셋은 같은 문제의 서로 다른 사례다 — gradlew 에 준 -D 는 Gradle 자신의 JVM 에만
		// 붙고 포크된 테스트 JVM 으로 자동 전달되지 않아, 그대로 두면 @EnabledIfSystemProperty 가
		// 테스트 쪽에서 못 보고 **조용히 스킵**된다. 셋 다 기본값이 없으므로 평소에는 프로퍼티
		// 자체가 없고 해당 테스트만 건너뛴다.
		//
		// 📌 이 주석이 이미 있는데도 #207 리그를 붙이며 그대로 한 번 밟았다(2026-08-17).
		//    스킵은 BUILD SUCCESSFUL 로 나오므로, 켰다고 생각한 리그가 안 돈 것을 출력으로는
		//    알 수 없다 — 리포트의 skipped 수를 봐야 한다.

		// 레이스 재현 테스트(PoseDataOrphanRaceTest)는 실제 MySQL(3307)이 필요하다.
		if (System.getProperty('race.mysql') != null) {
			systemProperty 'race.mysql', System.getProperty('race.mysql')
		}

		// AdminMemberExplainCaptureTest — loadtest/measure_admin_filter_explain.sh 전용.
		if (System.getProperty('explain.capture') != null) {
			systemProperty 'explain.capture', System.getProperty('explain.capture')
		}

		// SessionTimeoutSweepLoadTest(#207) — 실제 MySQL(3308)이 필요하다.
		// 이 리그는 결과를 stdout 으로 낸다(측정 표). 위 둘과 달리 **출력을 봐야 의미가 있으므로**
		// 표준 스트림도 같이 연다 — 평소에는 프로퍼티가 없어 안 열린다.
		if (System.getProperty('sweep.load') != null) {
			systemProperty 'sweep.load', System.getProperty('sweep.load')
			testLogging {
				showStandardStreams = true
			}
		}
	}
